# mex-wholebodymodel

./: .gitignore  .startup_mexWholeBodyModel.m.in  CHANGELOG.md  CMakeLists.txt  README.md  forwardDynamics_zeroExternalForces.m  startupMatlab.m  startupMex.m  startup_Mex.m.in
bkp/: modelstate.h  modelstateupdater.cpp
cmake/: FindMatlab.cmake
controllers/LEGACY/torqueBalancing/: initializeTorqueBalancing.m
controllers/models/walkman/: model.urdf
controllers/torqueBalancing/: README.md  initializeTorqueBalancing.m  visualizeResults.m
controllers/torqueBalancingElasticity/: initializeTorqueBalancing.m
controllers/torqueBalancingGainTuning/: README.md  initializeTorqueBalancing.m
controllers/torqueBalancingJointControl/: initializeTorqueBalancing.m
controllers/torqueBalancingStateMachine/: initializeTorqueBalancing.m
controllers/torqueBalancingWalkman/: README.md  initializeTorqueBalancing.m
controllers/torqueBalancingWalkmanOnlyLegs/: initializeTorqueBalancing.m
controllers/torqueBalancingWalkmanOnlyLegs_JE/: initializeTorqueBalancing.m
controllers/torqueBalancingWalkman_JE/: initializeTorqueBalancing.m
controllers/torqueBalancing_JE/: ballode2.m  event.m  initializeTorqueBalancing.m
controllers/utilityMatlabFunctions/: QPSolver.m
examples/: rigidBody.urdf  rigidBodyDynamics.m
experiments/torqueBalancingGainTuning/: initializeTorqueBalancing.m
experiments/torqueBalancingWalkman/: README.md
include/: componentmanager.h  icubWBModelTester.h  mexwholebodymodelsettings.h  modelcentroidalmomentum.h  modelcomponent.h  modeldjdq.h  modelforwardkinematics.h  modelgeneralisedbiasforces.h  modelgetstate.h  modelinitialise.h  modelinitialiseurdf.h  modeljacobian.h  modeljointlimits.h  modelmassmatrix.h  modelsetworldframe.h  modelsetworldlink.h  modelstate.h  modelstateupdater.h  modelupdatestate.h  modelvisualizetrajectory.h
matlab-src/: README.txt  baseLinkFrameTest.m  constraintBothFeetOnGround.m  cont_fcn_controller.m  cont_forwardDyn_sim.m  cont_forwardDynamics_fun.m  cont_visualize.m  controller_BalancingTorque.m  controller_test_BalancingTorqueWithQP.m  forwardDynTest.m  forwardDynTest.m~  forwardDynamics.m  forwardDynamicsConsistencyTest.m  forwardDynamics_zeroExternalForces.m  func_forwardDyn.m  initialize_forwardDyn.m  integrateForwardDynamics.m  jointLimits.m  jointLimits.mat  plot_results.m  quaternionDerivative.m  run_forwardDyn.m  set_parameters.m  simulate_forwardDyn.m  storedTestTrajectory.mat  test_changeRefFrame.m  timeTest.m  update_parameters.m  visualizeForwardDynamics.m  visualize_forwardDyn.m
matlab-src/+WBM/: WBMBase.m  WBMBasic.m  abbrev_legend_4_variables.txt  abbreviation_legend_4_variables.txt  iCubSimConfig.m  wbmBaseModelParams.m  wbmBaseRobotConfig.m  wbmBasicModelParams.m  wbmBasicRobotConfig.m  wbmErrorMsg.m  wbmHumanoidConfig.m  wbmSimConfig.m  wbmState.m  wbmStateParams.m
matlab-src/+iCubWBM/: iCubConfig.m  iCubWBMBasic.m  iCubWBMParams.m  iCubWBMState.m
matlab-src/TorqueBalancing_js/: README  balController.m  centroidalConversion.m  centroidalTransformationT_TDot.m  controllerFCN.m  forwardDynamics.m  gains.m  ikin_function.m  ikin_generator.m  ikin_graphics.m  ikin_integrator.m  integrateForwardDynamics.m  interpolation.m
matlab-src/deprecated/: constraintBothFeetOnGround.m  controller_JointPosition.m  forwardDynTest.m  forwardDynamics.m  func_forwardDyn.m~  initialize_forwardDyn.m  run_forwardDyn.m  test_changeRefFrame.m  timeTest.m  visualize_forwardDyn.m
matlab-src/icub_stls/: icub_l_foot.stl  icub_l_forearm.stl  icub_l_shank.stl  icub_l_thigh.stl  icub_lap_belt_1.stl  icub_r_foot.stl  icub_r_shank.stl
matlab-src/jointSpaceLinearization/: README.md  kron_prod.m  leastSquareConstr.m  linearization1Foot_base.m  linearization1Foot_centroidal.m
matlab-src/mex-wholebodymodel_balancing/: QP1FOOT.m  QP2FEET.m  README  Rf.m  balController.m  constraints.m  controllerFCN.m  forwardDynamics.m  gains.m  generTraj.m  integrateForwardDynamics.m  nonLinImp.m  parametrization.m  storedTestTrajectory.mat  visualizer_demo.m  visualizer_graphics.m  visualizer_graphics_lin.m  whatname.m
matlab-src/tests/: timeTest.m  timeTest_2.m
matlab-src/torque_lin_two_feet/: graphics.m  main_lin.m  main_test.m  num_der.m
matlab-src/torques_lin_one_foot/: KD.mat  gains_tun.mat  kronecher_prod.m  lin_main.m  lin_test.m
matlab-src/torques_lin_two_feet/: KD.mat  KS.mat  der_Kder.m  gains_tun.mat  main_lin.m  main_test.m  num_der.m  parametrization.m  tau_reg.mat
matlab-src/whole_body_model_functions/: wbm_centroidalMomentum.m  wbm_djdq.m  wbm_forwardKinematics.m  wbm_generalisedBiasForces.m  wbm_getState.m  wbm_getWorldFrameFromFixedLink.m  wbm_jacobian.m  wbm_jointLimits.m  wbm_massMatrix.m  wbm_modelInitialise.m  wbm_modelInitialiseFromURDF.m  wbm_setWorldFrame.m  wbm_setWorldLink.m  wbm_updateState.m
matlab-src/worker_functions/: convertAxisAngle2Quaternion.m  frame2posrot.m  plotQuat.m  quat2rot.m  quaternion2dcm.m  quaternionDerivative.m  stldemo.m  visualizeForwardDynamics.m
matlabTorqueBalancing/: README.md  initializeTorqueBalancing.m
mex-wholebodymodel/matlab/: CMakeLists.txt
models/walkman/: modelOnlyLegs.urdf
src/: componentmanager.cpp  icubWBModelTester.cpp  mexIcubWholeBodyModel.cpp  mexmain.cpp  modelcentroidalmomentum.cpp  modelcomponent.cpp  modeldjdq.cpp  modelforwardkinematics.cpp  modelgeneralisedbiasforces.cpp  modelgetstate.cpp  modelinitialise.cpp  modelinitialiseurdf.cpp  modeljacobian.cpp  modeljointlimits.cpp  modelmassmatrix.cpp  modelsetworldframe.cpp  modelsetworldframe.cpp~  modelsetworldlink.cpp  modelstate.cpp  modelstateupdater.cpp  modelupdatestate.cpp  modelvisualizetrajectory.cpp  timeTest.m
tests/: CMakeLists.txt  WBMAssertEqual.m  WBMTests.m  addpathWBMTests.m.in  baseLinkFrameTest.m  clearExit.m  forwardDynamics_kinEnergyTest.m  initialiseFromURDFTest.m  initialiseTest.m  kinEnergyConservationTest.m  kinEnergyConservationTestAllModels.m  runWBMTests.m  twoLinks.urdf
tests/models/: iCubV2.5.urdf
torqueBalancing-matlab/: initializeTorqueBalancing.m
wbm-toolbox/: CMakeLists.txt
(+1243 files in other folders)
